# polyc

./: .bazelrc  .gitignore  MODULE.bazel  README.md  ROADMAP.md
bench/: BUILD.bazel
docs/: dialect.md  getting-started.md
examples/: BUILD.bazel
include/polyc/Conversion/: BUILD.bazel
include/polyc/Dialect/Poly/: BUILD.bazel  PolyDialect.h  PolyDialect.td
include/polyc/JIT/: BUILD.bazel
include/polyc/Transforms/: BUILD.bazel
lib/Conversion/: BUILD.bazel
lib/Dialect/Poly/: BUILD.bazel  PolyDialect.cc
lib/JIT/: BUILD.bazel
lib/Transforms/: BUILD.bazel
test/: BUILD.bazel
test/Dialect/Poly/: BUILD.bazel  round_trip.mlir  verify.mlir
test/common/: BUILD.bazel  run_roundtrip.sh  run_verify_diagnostics.sh  test.bzl
tools/polyc/: BUILD.bazel
tools/polyc-opt/: BUILD.bazel  polyc_opt.cc
