load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")

package(default_visibility = ["//visibility:public"])

td_library(
    name = "PolyDialectTdFiles",
    srcs = ["PolyDialect.td"],
    includes = ["../../.."],
    deps = [
        "@llvm-project//mlir:BuiltinDialectTdFiles",
        "@llvm-project//mlir:OpBaseTdFiles",
        "@llvm-project//mlir:SideEffectInterfacesTdFiles",
    ],
)

gentbl_cc_library(
    name = "PolyDialectIncGen",
    strip_include_prefix = "/include",
    tbl_outs = [
        (["-gen-dialect-decls", "-dialect=poly"], "PolyDialect.h.inc"),
        (["-gen-dialect-defs", "-dialect=poly"], "PolyDialect.cc.inc"),
        (["-gen-op-decls"], "PolyOps.h.inc"),
        (["-gen-op-defs"], "PolyOps.cc.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "PolyDialect.td",
    deps = [":PolyDialectTdFiles"],
)

cc_library(
    name = "PolyDialectHeaders",
    hdrs = ["PolyDialect.h"],
    strip_include_prefix = "/include",
    deps = [
        ":PolyDialectIncGen",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:SideEffectInterfaces",
    ],
)
